Cookies bar | Visiblity fixed

--- a/wp-content/themes/ow/src/components/page-templates/default-page/_default-page-styles.scss
+++ b/wp-content/themes/ow/src/components/page-templates/default-page/_default-page-styles.scss
@@ -15,7 +15,7 @@
 
 #eu-cookie-bar {
     right: 0;
-    display: flex;
+    //display: flex;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
